04-ocp-service-mesh/demo/inventory/rules/inventory-vs-fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory-fault
spec:
  hosts:
    - "istio-ingressgateway-istio-system.apps.cluster-dvq5p.dvq5p.sandbox1404.opentlc.com"
  gateways:
    - catalog/catalog-gateway
  http:
    - fault:
        abort:
          httpStatus: 500
          percentage:
            value: 50
      route:
        - destination:
            host: inventory
            port:
              number: 80
